// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esm (client, hydratable) > Context API > should not support VariableDeclaration that is not top-level 1`] = `
"import { createContext } from 'solid-js';
if (someCond) {
  const Example = createContext();
}"
`;

exports[`esm (client, hydratable) > Context API > should support ExportNamedDeclaration 1`] = `
"import { $$context as _$$context } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { createContext } from 'solid-js';
const _REGISTRY = _$$registry();
export const Example = _$$context(_REGISTRY, "Example", createContext());
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > Context API > should support top-level VariableDeclaration 1`] = `
"import { $$context as _$$context } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { createContext } from 'solid-js';
const _REGISTRY = _$$registry();
const Example = _$$context(_REGISTRY, "Example", createContext());
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should skip ExportDefaultDeclaration w/ FunctionExpression with @refresh reload 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
export default function Foo() {
  return _$getNextElement(_tmpl$);
}
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should skip ExportDefaultDeclaration w/ FunctionExpression with @refresh skip 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
// @refresh skip
export default function Foo() {
  return _$getNextElement(_tmpl$);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should skip ExportDefaultDeclaration w/ FunctionExpression with invalid Component name 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const JSX_foo_1 = _$$component(_REGISTRY, "JSX_foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
export default function foo() {
  return /*@refresh jsx-skip*/_$createComponent(JSX_foo_1, {});
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should skip ExportDefaultDeclaration w/ FunctionExpression with valid Component name and >1 params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
export default function Foo(a, b) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should transform ExportDefaultDeclaration w/ FunctionExpression with valid Component name and params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo(props) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:21",
  signature: "1f7be6ec"
});
export default Foo;
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should transform ExportDefaultDeclaration w/ FunctionExpression with valid Component name and params 2`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:21",
  signature: "c963b907"
});
export default Foo;
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should transform ExportDefaultDeclaration w/ FunctionExpression with valid Component name and params 3`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { insert as _$insert } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  _$insert(_el$, () => _props.v0);
  return _el$;
})(), {
  location: "example.jsx:4:15",
  signature: "ae0f2a31"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: example
  });
}, {
  location: "example.jsx:3:21",
  signature: "27e4cbbb",
  dependencies: () => ({
    example
  })
});
const example = 'Foo';
export default Foo;
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should transform ExportDefaultDeclaration w/ FunctionExpression with valid Component name and params 4`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {
  children: "Foo"
}), {
  location: "example.jsx:4:15",
  signature: "23a9c5eb"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    get v0() {
      return Example.Provider;
    }
  });
}, {
  location: "example.jsx:3:21",
  signature: "b4605599",
  dependencies: () => ({
    Example
  })
});
const Example = createContext();
export default Foo;
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportDefaultDeclaration w/ FunctionExpression > should transform ExportDefaultDeclaration w/ FunctionExpression with valid Component name and params 5`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>foo\`),
  _tmpl$2 = /*#__PURE__*/_$template(\`<div>bar\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1_1 = _$$component(_REGISTRY, "Foo_1_1", _props3 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:8:12",
  signature: "241c14a4"
});
const Foo_1_2 = _$$component(_REGISTRY, "Foo_1_2", _props4 => /*@refresh jsx-skip*/_$createComponent(Bar, {}), {
  location: "example.jsx:9:12",
  signature: "61d9a109"
});
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/[_$createComponent(Foo_1_1, {}), _$createComponent(Foo_1_2, {})], {
  location: "example.jsx:7:10",
  signature: "f71aefc6"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:5:21",
  signature: "c963b907"
});
const Bar_1 = _$$component(_REGISTRY, "Bar_1", _props2 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$2), {
  location: "example.jsx:3:15",
  signature: "fad4daa8"
});
const Bar = _$$component(_REGISTRY, "Bar", function Bar() {
  return /*@refresh jsx-skip*/_$createComponent(Bar_1, {});
}, {
  location: "example.jsx:2:6",
  signature: "e93ca257"
});
export default Foo;
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should skip ExportNamedDeclaration w/ FunctionExpression with @refresh reload 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
export function Foo() {
  return _$getNextElement(_tmpl$);
}
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should skip ExportNamedDeclaration w/ FunctionExpression with @refresh skip 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
// @refresh skip
export function Foo() {
  return _$getNextElement(_tmpl$);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should skip ExportNamedDeclaration w/ FunctionExpression with invalid Component name 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:13",
  signature: "c963b907"
});
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should skip ExportNamedDeclaration w/ FunctionExpression with valid Component name and >1 params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
export function Foo(a, b) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should transform ExportNamedDeclaration w/ FunctionExpression with valid Component name and params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo(props) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:13",
  signature: "1f7be6ec"
});
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should transform ExportNamedDeclaration w/ FunctionExpression with valid Component name and params 2`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:13",
  signature: "c963b907"
});
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should transform ExportNamedDeclaration w/ FunctionExpression with valid Component name and params 3`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { insert as _$insert } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  _$insert(_el$, () => _props.v0);
  return _el$;
})(), {
  location: "example.jsx:4:15",
  signature: "ae0f2a31"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: example
  });
}, {
  location: "example.jsx:3:13",
  signature: "27e4cbbb",
  dependencies: () => ({
    example
  })
});
const example = 'Foo';
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should transform ExportNamedDeclaration w/ FunctionExpression with valid Component name and params 4`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {
  children: "Foo"
}), {
  location: "example.jsx:4:15",
  signature: "23a9c5eb"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    get v0() {
      return Example.Provider;
    }
  });
}, {
  location: "example.jsx:3:13",
  signature: "b4605599",
  dependencies: () => ({
    Example
  })
});
const Example = createContext();
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > ExportNamedDeclaration w/ FunctionExpression > should transform ExportNamedDeclaration w/ FunctionExpression with valid Component name and params 5`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>foo\`),
  _tmpl$2 = /*#__PURE__*/_$template(\`<div>bar\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1_1 = _$$component(_REGISTRY, "Foo_1_1", _props3 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:8:12",
  signature: "241c14a4"
});
const Foo_1_2 = _$$component(_REGISTRY, "Foo_1_2", _props4 => /*@refresh jsx-skip*/_$createComponent(_props4.v0, {}), {
  location: "example.jsx:9:12",
  signature: "9a24e06b"
});
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/[_$createComponent(Foo_1_1, {}), _$createComponent(Foo_1_2, {
  get v0() {
    return _props.v0;
  }
})], {
  location: "example.jsx:7:10",
  signature: "f32afbbe"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: Bar
  });
}, {
  location: "example.jsx:5:13",
  signature: "2f861eed",
  dependencies: () => ({
    Bar
  })
});
const Bar_1 = _$$component(_REGISTRY, "Bar_1", _props2 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$2), {
  location: "example.jsx:3:15",
  signature: "fad4daa8"
});
const Bar = _$$component(_REGISTRY, "Bar", function Bar() {
  return /*@refresh jsx-skip*/_$createComponent(Bar_1, {});
}, {
  location: "example.jsx:2:13",
  signature: "e93ca257"
});
export { Bar };
export { Foo };
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should skip FunctionDeclaration with @refresh reload 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
function Foo() {
  return _$getNextElement(_tmpl$);
}
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should skip FunctionDeclaration with @refresh skip 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
// @refresh skip
function Foo() {
  return _$getNextElement(_tmpl$);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should skip FunctionDeclaration with invalid Component name 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const JSX_foo_1 = _$$component(_REGISTRY, "JSX_foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
function foo() {
  return /*@refresh jsx-skip*/_$createComponent(JSX_foo_1, {});
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should skip FunctionDeclaration with valid Component name and >1 params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
function Foo(a, b) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should transform FunctionDeclaration with valid Component name and params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo(props) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:6",
  signature: "1f7be6ec"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should transform FunctionDeclaration with valid Component name and params 2`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:6",
  signature: "c963b907"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should transform FunctionDeclaration with valid Component name and params 3`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { insert as _$insert } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const example = 'Foo';
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  _$insert(_el$, () => _props.v0);
  return _el$;
})(), {
  location: "example.jsx:4:15",
  signature: "ae0f2a31"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: example
  });
}, {
  location: "example.jsx:3:6",
  signature: "27e4cbbb",
  dependencies: () => ({
    example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should transform FunctionDeclaration with valid Component name and params 4`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const Example = createContext();
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {
  children: "Foo"
}), {
  location: "example.jsx:4:15",
  signature: "23a9c5eb"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    get v0() {
      return Example.Provider;
    }
  });
}, {
  location: "example.jsx:3:6",
  signature: "b4605599",
  dependencies: () => ({
    Example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > FunctionDeclaration > should transform FunctionDeclaration with valid Component name and params 5`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>bar\`),
  _tmpl$2 = /*#__PURE__*/_$template(\`<div>foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Bar_1 = _$$component(_REGISTRY, "Bar_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:15",
  signature: "61dd3182"
});
const Bar = _$$component(_REGISTRY, "Bar", function Bar() {
  return /*@refresh jsx-skip*/_$createComponent(Bar_1, {});
}, {
  location: "example.jsx:2:6",
  signature: "e93ca257"
});
const Foo_1_1 = _$$component(_REGISTRY, "Foo_1_1", _props3 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$2), {
  location: "example.jsx:8:12",
  signature: "241c14a4"
});
const Foo_1_2 = _$$component(_REGISTRY, "Foo_1_2", _props4 => /*@refresh jsx-skip*/_$createComponent(Bar, {}), {
  location: "example.jsx:9:12",
  signature: "61d9a109"
});
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props2 => /*@refresh jsx-skip*/[_$createComponent(Foo_1_1, {}), _$createComponent(Foo_1_2, {})], {
  location: "example.jsx:7:10",
  signature: "ab3b4916"
});
const Foo = _$$component(_REGISTRY, "Foo", function Foo() {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:5:6",
  signature: "c963b907"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should skip VariableDeclarator w/ ArrowFunctionExpression with @refresh reload 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
const Foo = () => {
  return _$getNextElement(_tmpl$);
};
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should skip VariableDeclarator w/ ArrowFunctionExpression with @refresh skip 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
// @refresh skip
const Foo = () => {
  return _$getNextElement(_tmpl$);
};"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should skip VariableDeclarator w/ ArrowFunctionExpression with invalid Component name 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const JSX_foo_1 = _$$component(_REGISTRY, "JSX_foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const foo = () => {
  return /*@refresh jsx-skip*/_$createComponent(JSX_foo_1, {});
};
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should skip VariableDeclarator w/ ArrowFunctionExpression with valid Component name and >1 params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = (a, b) => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
};
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should transform VariableDeclarator w/ ArrowFunctionExpression with valid Component name and params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", props => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "afe16871"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should transform VariableDeclarator w/ ArrowFunctionExpression with valid Component name and params 2`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", () => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "82d7f8e8"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should transform VariableDeclarator w/ ArrowFunctionExpression with valid Component name and params 3`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { insert as _$insert } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const example = 'Foo';
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  _$insert(_el$, () => _props.v0);
  return _el$;
})(), {
  location: "example.jsx:4:17",
  signature: "ae0f2a31"
});
const Foo = _$$component(_REGISTRY, "Foo", () => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: example
  });
}, {
  location: "example.jsx:3:20",
  signature: "40bf5e47",
  dependencies: () => ({
    example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should transform VariableDeclarator w/ ArrowFunctionExpression with valid Component name and params 4`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const Example = createContext();
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {
  children: "Foo"
}), {
  location: "example.jsx:4:17",
  signature: "23a9c5eb"
});
const Foo = _$$component(_REGISTRY, "Foo", () => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    get v0() {
      return Example.Provider;
    }
  });
}, {
  location: "example.jsx:3:20",
  signature: "7d38e403",
  dependencies: () => ({
    Example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > ArrowFunctionExpression > should transform VariableDeclarator w/ ArrowFunctionExpression with valid Component name and params 5`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>bar\`),
  _tmpl$2 = /*#__PURE__*/_$template(\`<div>foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Bar_1 = _$$component(_REGISTRY, "Bar_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "61dd3182"
});
const Bar = _$$component(_REGISTRY, "Bar", () => {
  return /*@refresh jsx-skip*/_$createComponent(Bar_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "d1c6ca9b"
});
const Foo_1_1 = _$$component(_REGISTRY, "Foo_1_1", _props3 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$2), {
  location: "example.jsx:8:14",
  signature: "241c14a4"
});
const Foo_1_2 = _$$component(_REGISTRY, "Foo_1_2", _props4 => /*@refresh jsx-skip*/_$createComponent(Bar, {}), {
  location: "example.jsx:9:14",
  signature: "61d9a109"
});
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props2 => /*@refresh jsx-skip*/[_$createComponent(Foo_1_1, {}), _$createComponent(Foo_1_2, {})], {
  location: "example.jsx:7:12",
  signature: "e50aac71"
});
const Foo = _$$component(_REGISTRY, "Foo", () => {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:5:20",
  signature: "82d7f8e8"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should skip VariableDeclarator w/ FunctionExpression with @refresh reload 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
const Foo = function () {
  return _$getNextElement(_tmpl$);
};
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should skip VariableDeclarator w/ FunctionExpression with @refresh skip 1`] = `
"import { template as _$template } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
// @refresh skip
const Foo = function () {
  return _$getNextElement(_tmpl$);
};"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should skip VariableDeclarator w/ FunctionExpression with invalid Component name 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const JSX_foo_1 = _$$component(_REGISTRY, "JSX_foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const foo = function () {
  return /*@refresh jsx-skip*/_$createComponent(JSX_foo_1, {});
};
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should skip VariableDeclarator w/ FunctionExpression with valid Component name and >1 params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = function (a, b) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
};
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should transform VariableDeclarator w/ FunctionExpression with valid Component name and params 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function (props) {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "a6a4d450"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should transform VariableDeclarator w/ FunctionExpression with valid Component name and params 2`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>Foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "4b145a58"
});
const Foo = _$$component(_REGISTRY, "Foo", function () {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "a0860447"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should transform VariableDeclarator w/ FunctionExpression with valid Component name and params 3`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { insert as _$insert } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<h1>\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const example = 'Foo';
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  _$insert(_el$, () => _props.v0);
  return _el$;
})(), {
  location: "example.jsx:4:17",
  signature: "ae0f2a31"
});
const Foo = _$$component(_REGISTRY, "Foo", function () {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    v0: example
  });
}, {
  location: "example.jsx:3:20",
  signature: "dc846265",
  dependencies: () => ({
    example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should transform VariableDeclarator w/ FunctionExpression with valid Component name and params 4`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const Example = createContext();
const _REGISTRY = _$$registry();
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {
  children: "Foo"
}), {
  location: "example.jsx:4:17",
  signature: "23a9c5eb"
});
const Foo = _$$component(_REGISTRY, "Foo", function () {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {
    get v0() {
      return Example.Provider;
    }
  });
}, {
  location: "example.jsx:3:20",
  signature: "5dc2d058",
  dependencies: () => ({
    Example
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > VariableDeclarator > FunctionExpression > should transform VariableDeclarator w/ FunctionExpression with valid Component name and params 5`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>bar\`),
  _tmpl$2 = /*#__PURE__*/_$template(\`<div>foo\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Bar_1 = _$$component(_REGISTRY, "Bar_1", _props => /*@refresh jsx-skip*/_$getNextElement(_tmpl$), {
  location: "example.jsx:3:17",
  signature: "61dd3182"
});
const Bar = _$$component(_REGISTRY, "Bar", function () {
  return /*@refresh jsx-skip*/_$createComponent(Bar_1, {});
}, {
  location: "example.jsx:2:20",
  signature: "1fb34faa"
});
const Foo_1_1 = _$$component(_REGISTRY, "Foo_1_1", _props3 => /*@refresh jsx-skip*/_$getNextElement(_tmpl$2), {
  location: "example.jsx:8:14",
  signature: "241c14a4"
});
const Foo_1_2 = _$$component(_REGISTRY, "Foo_1_2", _props4 => /*@refresh jsx-skip*/_$createComponent(Bar, {}), {
  location: "example.jsx:9:14",
  signature: "61d9a109"
});
const Foo_1 = _$$component(_REGISTRY, "Foo_1", _props2 => /*@refresh jsx-skip*/[_$createComponent(Foo_1_1, {}), _$createComponent(Foo_1_2, {})], {
  location: "example.jsx:7:12",
  signature: "e50aac71"
});
const Foo = _$$component(_REGISTRY, "Foo", function () {
  return /*@refresh jsx-skip*/_$createComponent(Foo_1, {});
}, {
  location: "example.jsx:5:20",
  signature: "a0860447"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix build > refs > should work with a function 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { use as _$use } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>Comp\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Comp_1 = _$$component(_REGISTRY, "Comp_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  var _ref$ = _props.v0;
  typeof _ref$ === "function" ? _$use(_ref$, _el$) : _props.v0 = _el$;
  return _el$;
})(), {
  location: "example.jsx:4:19",
  signature: "6f76290"
});
const Comp = _$$component(_REGISTRY, "Comp", () => {
  let el;
  return /*@refresh jsx-skip*/_$createComponent(Comp_1, {
    v0: _el => el = _el
  });
}, {
  location: "example.jsx:2:23",
  signature: "726057ca"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix build > refs > should work with a mutable variable 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { use as _$use } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>Comp\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
const _REGISTRY = _$$registry();
const Comp_1 = _$$component(_REGISTRY, "Comp_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  var _ref$ = _props.v0;
  typeof _ref$ === "function" ? _$use(_ref$, _el$) : _props.v0 = _el$;
  return _el$;
})(), {
  location: "example.jsx:4:19",
  signature: "6f76290"
});
const Comp = _$$component(_REGISTRY, "Comp", () => {
  let el;
  return /*@refresh jsx-skip*/_$createComponent(Comp_1, {
    v0: _arg => {
      if (typeof el === "function") {
        el(_arg);
      } else {
        el = _arg;
      }
    }
  });
}, {
  location: "example.jsx:2:23",
  signature: "d3db0f89"
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix build > signals as refs > should work 1`] = `
"import { template as _$template } from "solid-js/web";
import { createComponent as _$createComponent } from "solid-js/web";
import { getNextElement as _$getNextElement } from "solid-js/web";
import { use as _$use } from "solid-js/web";
var _tmpl$ = /*#__PURE__*/_$template(\`<div>Comp\`);
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { createSignal } from 'solid-js';
const _REGISTRY = _$$registry();
const Comp_1 = _$$component(_REGISTRY, "Comp_1", _props => /*@refresh jsx-skip*/(() => {
  var _el$ = _$getNextElement(_tmpl$);
  var _ref$ = _props.v0;
  typeof _ref$ === "function" ? _$use(_ref$, _el$) : _props.v0 = _el$;
  return _el$;
})(), {
  location: "example.jsx:6:19",
  signature: "6f76290"
});
const Comp = _$$component(_REGISTRY, "Comp", () => {
  const [el, setEl] = createSignal();
  return /*@refresh jsx-skip*/_$createComponent(Comp_1, {
    v0: _arg => {
      if (typeof setEl === "function") {
        setEl(_arg);
      }
    }
  });
}, {
  location: "example.jsx:4:23",
  signature: "57db44c6",
  dependencies: () => ({
    createSignal
  })
});
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix render > @refresh reload > should work 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$decline as _$$decline } from "solid-refresh";
// @refresh reload
import { render } from 'solid-js/web';
if (root) {
  const _cleanup = render(() => _$createComponent(App, {}), root);
  if (import.meta.hot) import.meta.hot.dispose(_cleanup);
}
if (import.meta.hot) {
  _$$decline("esm", import.meta.hot);
}"
`;

exports[`esm (client, hydratable) > fix render > import specifiers > should work with ImportNamespaceSpecifier 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import * as solidWeb from 'solid-js/web';
const _REGISTRY = _$$registry();
const JSX__cleanup_1 = _$$component(_REGISTRY, "JSX__cleanup_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {}), {
  location: "example.jsx:4:32",
  signature: "1fdef89b"
});
const _cleanup = solidWeb.render(() => /*@refresh jsx-skip*/_$createComponent(JSX__cleanup_1, {
  v0: App
}), root);
if (import.meta.hot) import.meta.hot.dispose(_cleanup);
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix render > import specifiers > should work with ImportSpecifier + Identifier 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { render } from 'solid-js/web';
const _REGISTRY = _$$registry();
const JSX__cleanup_1 = _$$component(_REGISTRY, "JSX__cleanup_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {}), {
  location: "example.jsx:4:23",
  signature: "1fdef89b"
});
const _cleanup = render(() => /*@refresh jsx-skip*/_$createComponent(JSX__cleanup_1, {
  v0: App
}), root);
if (import.meta.hot) import.meta.hot.dispose(_cleanup);
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix render > import specifiers > should work with ImportSpecifier + aliased Identifier 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { render as Render } from 'solid-js/web';
const _REGISTRY = _$$registry();
const JSX__cleanup_1 = _$$component(_REGISTRY, "JSX__cleanup_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {}), {
  location: "example.jsx:4:23",
  signature: "1fdef89b"
});
const _cleanup = Render(() => /*@refresh jsx-skip*/_$createComponent(JSX__cleanup_1, {
  v0: App
}), root);
if (import.meta.hot) import.meta.hot.dispose(_cleanup);
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix render > import specifiers > should work with ImportSpecifier + aliased Identifier from StringLiteral 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { 'render' as Render } from 'solid-js/web';
const _REGISTRY = _$$registry();
const JSX__cleanup_1 = _$$component(_REGISTRY, "JSX__cleanup_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {}), {
  location: "example.jsx:4:23",
  signature: "1fdef89b"
});
const _cleanup = Render(() => /*@refresh jsx-skip*/_$createComponent(JSX__cleanup_1, {
  v0: App
}), root);
if (import.meta.hot) import.meta.hot.dispose(_cleanup);
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;

exports[`esm (client, hydratable) > fix render > top-level statements > should work with IfStatement 1`] = `
"import { createComponent as _$createComponent } from "solid-js/web";
import { $$component as _$$component } from "solid-refresh";
import { $$refresh as _$$refresh } from "solid-refresh";
import { $$registry as _$$registry } from "solid-refresh";
import { render } from 'solid-js/web';
const _REGISTRY = _$$registry();
const JSX__cleanup_1 = _$$component(_REGISTRY, "JSX__cleanup_1", _props => /*@refresh jsx-skip*/_$createComponent(_props.v0, {}), {
  location: "example.jsx:5:25",
  signature: "1fdef89b"
});
if (root) {
  const _cleanup = render(() => /*@refresh jsx-skip*/_$createComponent(JSX__cleanup_1, {
    v0: App
  }), root);
  if (import.meta.hot) import.meta.hot.dispose(_cleanup);
}
if (import.meta.hot) {
  _$$refresh("esm", import.meta.hot, _REGISTRY);
}"
`;
